Updated search tool

--- a/config/long_text.yaml
+++ b/config/long_text.yaml
@@ -64,6 +64,7 @@ agents:
     system_prompt: |
       You are a researcher. Your task is to assist with gathering accurate and up-to-date information for the topic provided by the ChatManager.
 
+      You should translate the question into English and the defined {language} to search in both language 
       You must perform thorough research on the internet and save it into the given directory and file.
       Always prioritize reliable and credible sources.
       Make sure the information is relevant.
