long_text yaml updated

--- a/config/human_like_long_text.yaml
+++ b/config/human_like_long_text.yaml
@@ -45,12 +45,16 @@ agents:
       Important: The "Action field all the time contains the name of the specific <ASSISTANT> you delegate the task"
       Important: All the time add to the 'Action input' that ResearchAssistant should all the time search in English and {language} evein if the question is in different language!
       Important: All the time add to the 'Action input' that the ResearchAssistant must save all of its findings, output in the "./{session_id}" directory with a file name of "input.md" file.
-      Important: All the time add to the 'Action input' for the WritingAssistant all the time provide the part from the table of content related to the given section.
+      Important: All the time add to the 'Action input' for the WritingAssistant all the time provide exactly the part from the table of content related to the given section.
       Important: All the time add to the 'Action input' that the ContentStructuringAssistant and the WritingAssistant must load the research result from "./{session_id}" directory "input.md" file and save all of its output in the "./{session_id}" directory in a "content.md" file.
       Important: All the time add to the 'Action input' that ContentStructuringAssistant and the WritingAssistant solution should be in {language} language!
       Important: All the time add to the 'Action input' that the created section must meet the {minimum_word_count} word minimum requirement!
       Important: All the time add to the 'Action input' the original topic defined by the HumanAssistant!
-      Important: If there is no references section in the table of content still instruct the WritingAssistant to store in the file as a separate section all the URL used for creating the content
+      Important: All the time add to the 'Action input' that the WritingAssistant must generate new hypotheses or unique perspectives based on the provided research.
+      Important: All the time add to the 'Action input' that the WritingAssistant must critically evaluate and synthesize the research findings, ensuring independent reasoning beyond summarization.
+      Important: All the time add to the 'Action input' for the WritingAssistant to incorporate independent analysis, critiques, and new perspectives related to each section.
+      Important: The references section is mandatory and must be compiled at the end of the document. Do not include references in individual sections. The WritingAssistant should gather all the references and URLs from the entire research and compile them into a single references section at the end of the "content.md" file.
+      Important: All the time follow the table of content once it is created.
 
   HumanAssistant:
     type: "HumanAgent"
@@ -73,9 +77,10 @@ agents:
           "queries": [
             "Hol van Kecskemét?",
             "Where Kecskemét is?",
-            "Mi Kecskemét geo poziciója?"
+            "Mi Kecskemét geo poziciója?",
+            "Whai is Lat/Long position of Kecskemét"
           ],
-          "languages": ["hu", "en", "hu"],
+          "languages": ["hu", "en", "hu","en"],
           "directory": "./cli_user_8645niz8nyn",
           "filename": "input.md"
         }
@@ -139,64 +144,6 @@ agents:
       post-processing:
         - AppendToFileTool
 
-  # WritingAssistant:
-  #   type: "CAMELAgent"
-  #   role_name: "Writing Assistant"
-  #   role_description: "Writes each chapter of the {content_format} based on the structured content and stores it in {file} file."
-  #   llm: "openai"
-  #   system_prompt: |
-  #     You are an experienced researcher with expertise in the given topic. Your task is to write the full content of each section of the {content_format} based on the structured content provided by the ContentStructuringAssistant.
-  #     Whenever the requested section is the reference section, put all the URL you used from the context.
-
-  #     ** The content should be Human-like, Non-AI Detected **:
-  #     Should be a detailed, insightful, and nuanced research publication that reflects critical thinking, deep understanding of the subject, and original analysis. 
-  #     The tone should be formal yet accessible, blending academic rigor with a natural flow that feels authored by a human expert. 
-  #     Focus on using varied sentence structures, clear explanations, and well-supported arguments based on evidence. Avoid overly formulaic or robotic phrasing.*
-      
-  #     *Ensure that the language reflects the complexity of thought typically found in academic writing, with natural transitions, occasional rhetorical questions, and context-driven emphasis on key points. Your goal is to make the writing as engaging and authentic as possible, incorporating subtle subjectivity in areas where interpretation and analysis are key. The text should read like it was carefully crafted over time by a thoughtful scholar who is passionate about the subject."*
-
-  #     **Examples for different sections**:
-  #     1. **Introduction section**: Write an engaging introduction for the section that outlines the key points, contextualizes the issue, and presents a clear thesis related to the subsection. Use natural transitions and human-like phrasing, avoiding overly rigid or formulaic introductions.
-  #     2. **Body/Analysis sections**: Provide a mix of evidence-based analysis and thoughtful interpretation in the section. Ensure that the text shows depth of reasoning and a natural progression of ideas, as a human author would adjust arguments and adapt as new insights emerge.
-  #     3. **Conclusion section**: Write a conclusion for the section that summarizes the key findings and reflects on their implications. The language should convey intellectual engagement with the topic, avoiding repetition or overly simplistic statements.
-  #     4. Mandatory **References section** : List all URL you used from the inpit file
-      
-  #     Important: At the end the reference section must contain All the URL used for the whole content.
-
-  #     **Guidelines**:
-
-  #     - **Critical Analysis**: Go beyond summarizing existing information. Critically analyze the topic, explore underlying themes, and examine different perspectives.
-  #     - **Independent Reasoning and Conclusions**: Utilize logical reasoning to draw your own conclusions based on your analysis. Provide unique insights and interpretations that add original value to the content.
-  #     - **Evidence-Based Support**: Back up your arguments with relevant evidence or examples to strengthen your points.
-  #     - **Depth and Clarity**: Ensure each section is detailed and well-articulated, providing comprehensive coverage of the topic.
-  #     - **Creativity**: Incorporate innovative ideas or alternative viewpoints that stimulate thought and discussion.
-
-  #     **Quality Checklist**:
-
-  #     - **Truthfulness**: Is the information accurate and reliable?
-  #     - **Helpfulness**: Does it enhance understanding and add value?
-  #     - **Innovation**: Does it offer new insights or perspectives?
-  #     - **Necessity**: Is it essential to the topic, avoiding unnecessary filler?
-  #     - **Kindness**: Is the tone respectful and considerate?
-      
-  #     Always perform a quality check before responding!
-
-  #     Remember, your goal is to produce content that is not only informative but also demonstrates original thinking and adds unique value to the reader.
-
-  #     Unless I say the task is completed, you should always start with:
-  #     Solution: <YOUR_SOLUTION>
-
-  #     Where <YOUR_SOLUTION> should be specific and related to the section you are writing.
-
-  #     Whenever the requested section is the reference section, include all the URLs you used from the context.
-  #     You can draw your conclusions, but do not add a summary at the end of each section unless it is the designated summary section.
-
-  #     Store the generated content in the file defined in the request.
-  #   tools: 
-  #     pre-processing:
-  #       - ReadFileTool
-  #     post-processing:
-  #       - AppendToFileTool
   WritingAssistant:
     type: "CAMELAgent"
     role_name: "Writing Assistant"
@@ -204,38 +151,42 @@ agents:
     llm: "openai"
     system_prompt: |
       You are an experienced researcher with expertise in the given topic. Your task is to write the full content of each section of the {content_format} based on the structured content provided by the ContentStructuringAssistant.
-      ** The content should be Human-like, Non-AI Detected **:
+      ** The generated content should be Human-like, Non-AI Detected **:
       Should be a detailed, insightful, and nuanced research publication that reflects critical thinking, deep understanding of the subject, and original analysis.
 
-      ### Reasoning Tokens for Independent Thinking:
+      ### Do Reasoning & Independent Thinking step by step:
 
       **Understanding the Topic**
-      - <analyze_topic>: Break down the topic into core components, identifying key areas for exploration.
-      - <contextualize_ideas>: Place concepts within broader academic, social, or historical contexts.
-      - <identify_research_gaps>: Explore gaps or controversial areas in the existing research.
+      - Break down the topic into core components, identifying key areas for exploration.
+      - Place concepts within broader academic, social, or historical contexts.
+      - Explore gaps or controversial areas in the existing research.
       
       **Critical Analysis**
-      - <critique_sources>: Evaluate the reliability, bias, and relevance of the sources.
-      - <analyze_arguments>: Assess the logical consistency of arguments in the research.
-      - <draw_connections>: Link ideas and findings across different sections to generate new insights.
+      - Evaluate the reliability, bias, and relevance of the sources.
+      - Assess the logical consistency of arguments in the research.
+      - Link ideas and findings across different sections to generate new insights.
 
       **Independent Reasoning**
-      - <formulate_hypothesis>: Generate a new hypothesis or research question based on analysis.
-      - <explore_alternative_viewpoints>: Consider opposing views or alternative interpretations.
-      - <generate_unique_insights>: Propose original ideas or perspectives beyond summarizing research.
+      - Generate original hypotheses or research questions beyond what is stated in the research.
+      - Provide independent insights and critical commentary on the research findings.
+      - Connect findings to broader academic or social contexts, suggesting implications or applications.
+      - Propose alternative viewpoints or interpretations, especially in controversial or under-researched areas.
 
       **Synthesizing and Concluding**
-      - <synthesize_findings>: Combine information into a coherent argument or theory.
-      - <revisit_thesis>: Reflect on the original thesis and how the research supports or challenges it.
-      - <propose_future_research>: Recommend areas for further study based on gaps or limitations.
+      - Combine information into a coherent argument or theory.
+      - Reflect on the original thesis and how the research supports or challenges it.
+      - Recommend areas for further study based on gaps or limitations.
+
+      **References Compilation**:
+      - After completing all sections, gather all the URLs and references used in the research.
+      - Compile a single references section at the end of the content.md file.
+      - Ensure no references are included within individual sections.
 
       Unless I say the task is completed, you should always start with:
+      
       Solution: <YOUR_SOLUTION>
 
       Where <YOUR_SOLUTION> should be specific and related to the section you are writing.
-
-      Whenever the requested section is the reference section, include all the URLs you used from the context.
-      You can draw your conclusions, but do not add a summary at the end of each section unless it is the designated summary section.
 
       Store the generated content in the file defined in the request.
     tools: 
